--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,72 @@
+body, p, h1, ul, li, blockquote{
+  padding: none;
+  margin: 0;
+}
+body{
+  font-family: "Vollkorn", Georgia, serif;
+}
+li{
+  list-style: none;
+}
+a{
+  text-decoration: none;
+}
 img{
-  max-width: 100px;
+  max-width: 100%;
+}
+
+/*GRID GERAL*/
+.estrutura{
+  display: grid;
+  grid-template-columns: minmax(160px, 1fr) 3fr 300px;
+  grid-template-areas: 
+  "header header header"
+  "sidenav content anuncios"
+  "footer footer footer";
+}
+.header{
+  grid-area: header;
+}
+.sidenav{
+  grid-area: sidenav;
+}
+.content{
+  grid-area: content;
+}
+.anuncios{
+  grid-area: anuncios;
+}
+.footer{
+  grid-area: footer;
+}
+
+/*HEADER DA PAGINA*/
+.header{
+  background: linear-gradient(135deg, #8844ee, #B07DFB);
+  padding: 30px;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+}
+.logo{
+  max-width: 200px ;
+}
+.header nav ul{
+  display: flex;
+  flex-wrap: wrap;
+}
+.header nav a{
+  display: block;
+  padding: 10px;
+  color: #fff;
+  font-size: 1.125em;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  transition: 0.1s;
+}
+.header nav a:hover{
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.header li + li{
+  margin-left: 30px;
 }
