--- a/estilo.css
+++ b/estilo.css
@@ -70,3 +70,23 @@ img{
 .header li + li{
   margin-left: 30px;
 }
+
+/*SIDENAV ESQUERDO D APAGINA*/
+.sidenav{
+  background-color: #fafbfc;
+  padding: 30px;
+}
+.sidenav li a {
+  display: block;
+  min-width: 60px;
+  max-width: 100px;
+  margin: 0 auto 30px auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0 rgba(44, 44, 44, 0.15);
+  transition: .1s ease-out;
+}
+.sidenav li a:hover{
+  background-color: #B07DFB;
+}
