--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 body, p, h1, ul, li, blockquote{
-  padding: none;
+  padding: 0;
   margin: 0;
 }
 body{
@@ -12,9 +12,9 @@ a{
   text-decoration: none;
 }
 img{
-  max-width: 100%;
   display: block;
   border-radius: 5px;
+  width: 100%;
 }
 
 /*GRID GERAL*/
@@ -40,6 +40,26 @@ img{
 }
 .footer{
   grid-area: footer;
+}
+@media(max-width: 1200px){
+  .estrutura{
+    grid-template-areas: 
+    "header header header"
+    "sidenav content content"
+    "sidenav anuncios anuncios"
+    "footer footer footer";
+  }
+}
+@media (max-width: 760px){
+  .estrutura{
+    grid-template-columns: 100%;
+    grid-template-areas:
+    "header "
+    "sidenav"
+    "content"
+    "anuncios"
+    "footer";
+  }
 }
 
 /*HEADER DA PAGINA*/
@@ -72,6 +92,20 @@ img{
 .header li + li{
   margin-left: 30px;
 }
+@media (max-width: 760px){
+  .header{
+    grid-template-columns: auto;
+  }
+  .logo{
+    margin-bottom: 20px;
+  }
+  .header nav a{
+    font-size: 1em;
+  }
+  .header li + li{
+    margin-left: 10px;
+  }
+}
 
 /*SIDENAV ESQUERDO DA PAGINA*/
 .sidenav{
@@ -91,6 +125,42 @@ img{
 }
 .sidenav li a:hover{
   background-color: #B07DFB;
+}
+@media (max-width:760px){
+  .sidenav ul{
+    display: flex;
+  }
+  .sidenav ul li{
+    flex: 1 0 60px;
+  }
+  .sidenav{
+    padding: 0 30px;
+    position: relative;
+  }
+  .sidenav li a{
+    margin: 30px 30px 30px 0;
+  }
+  .sidenav{
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar
+  }
+  .sidenav::after{
+    content:'→';
+    position: absolute;
+    top: 5px;
+    right: 30px;
+    color: rgba(0, 0, 0, 0.3);
+    animation: seta .5s ease-in 0s infinite alternate;
+  }
+  @keyframes seta{
+    from{
+      right: 30px;
+    }
+    to {
+      right: 20px;
+    }
+  }
 }
 
 /*CONTEUDO PRINCIPAL DA PAGINA*/
@@ -194,6 +264,14 @@ p{
 .atributos li + li{
   border-top: 2px solid #B07DFB;
 }
+.imagem-3{
+  justify-self: center;
+}
+@media (max-width: 600px){
+  .content{
+    grid-template-columns: auto;
+  }
+}
 
 /*SEÇÃO DE ANUNCIOS DA PAGINA*/
 .anuncios{
@@ -202,6 +280,7 @@ p{
   align-content: start;
   padding: 30px;
   gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 /*FOOTER DA PAGINA*/
